# amirstan_plugin

./: CMakeLists.txt
src/amir_cuda_util/: CMakeLists.txt
src/plugin/: CMakeLists.txt
src/plugin/adaptivePoolPlugin/: CMakeLists.txt
src/plugin/batchedNMSPlugin/: CMakeLists.txt  plugin.h
src/plugin/carafeFeatureReassemblePlugin/: CMakeLists.txt  carafeFeatureReassemblePlugin.cpp
src/plugin/deformableConvPlugin/: CMakeLists.txt  deform_conv_cuda.cpp
src/plugin/deformablePoolPlugin/: CMakeLists.txt
src/plugin/delta2bboxPlugin/: CMakeLists.txt
src/plugin/gridAnchorDynamicPlugin/: CMakeLists.txt
src/plugin/gridSamplePlugin/: CMakeLists.txt
src/plugin/groupNormPlugin/: CMakeLists.txt  group_norm_kernel.cu
src/plugin/meshGridPlugin/: CMakeLists.txt
src/plugin/roiExtractorPlugin/: CMakeLists.txt
src/plugin/roiPoolPlugin/: CMakeLists.txt
src/plugin/torchBmmPlugin/: CMakeLists.txt
src/plugin/torchCumMaxMinPlugin/: CMakeLists.txt
src/plugin/torchCumPlugin/: CMakeLists.txt  torchCumPlugin.cpp
src/plugin/torchEmbeddingPlugin/: CMakeLists.txt
src/plugin/torchGatherPlugin/: CMakeLists.txt
src/plugin/torchNMSPlugin/: CMakeLists.txt
src/plugin/torchUnfoldPlugin/: CMakeLists.txt
